# wardcat-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wardcat_mcp/: __init__.py  server.py
tests/: test_server.py
