[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wardcat-mcp"
version = "0.1.0"
description = "MCP server exposing wardcat's on-prem PII detection/anonymization as agent tools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Oğuzhan Topçu", email = "oguzhantopcu000@gmail.com" }]
keywords = ["mcp", "pii", "privacy", "anonymization", "llm", "guardrail", "wardcat", "on-prem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    # 1.1 adds the public ScanResult.reapply() the server relies on for per-call
    # actions — no more reaching into wardcat internals, so a normal <2 range is safe.
    "wardcat>=1.1,<2",
    # 1.10 is where MCP structured tool output landed.
    "mcp>=1.10,<2",
    # Pydantic needs typing_extensions.TypedDict for tool output schemas on
    # Python < 3.12; we import it directly, so declare it (it's transitive anyway).
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
# Enable the SpaCy NER layer (PERSON/ORG/ADDRESS) inside the server.
ner = ["wardcat[ner]>=1.1,<2"]

[project.scripts]
wardcat-mcp = "wardcat_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/oguzhantopcu0/wardcat-mcp"
"Changelog" = "https://github.com/oguzhantopcu0/wardcat-mcp/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/oguzhantopcu0/wardcat-mcp/issues"
"wardcat" = "https://github.com/oguzhantopcu0/wardcat"

[dependency-groups]
dev = ["ruff>=0.15", "mypy>=1.11", "pytest>=8"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
